--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
-Hi!!
+Hi there!!  :wave: My name is Marta 
+.................................................................................................................................
+After working in health and safety issues several years, I´m renovating myself studying programming. :computer:
+.................................................................................................................................
+:pushpin: How to reach me: 
+https://www.linkedin.com/in/martaportolesbargallo/
+.................................................................................................................................
+I love travelling :earth_africa: and reading books :books:
